# MAJ-Debate

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: ablation_manifest.json  ablation_manifest.template.json  external_baselines.json
data/: README.md
data/eval/: ddo_sample_topics.template.jsonl  ddo_sample_topics_clean.jsonl  ddo_sample_topics_raw_backup.jsonl  (+3 more)
notebooks/: 0_MAJ_Debate_EDA_Pipeline.ipynb
progress_report/: MAJ_Debate_Progress_Report.tex  references.bib
proposal/: MAJ_Debate_Proposal.tex  acl.sty  references.bib
report/: check_report.py  generate_figures.py  report.tex
scripts/: README.md  build_annotation_sheet.py  build_failure_inspector.py  build_human_form_v2.py  clean_partial_outputs.py  cleanup_gpus.py  compare_benchmarks.py  diagnose_duplicates.py  dump_progress_report_data.py  evaluate_ablations.py  generate_failure_stage_bundle.py  generate_progress_report_figures.py  groq_selected10_notebook.py  inspect_ablations.py  pick_gpu.py  run_all_ablations.py  run_baseline_judge.py  run_everything.sh  run_human_eval_ablations.sh  run_logic_test_ablations.sh  run_no_internal_graph_experiment.py  run_selected10_no_internal_experiment.py  score_form_responses.py  score_human_eval.py  stage1_vllm.py  stage2_vllm_shard.py  stage3_graph.py  stage4_judge.py  wait_for_gpu.py
tools/: extract_ddo_sample.js  extract_ddo_sample_clean.js  sample_stage1_configurations.py
web_app/: Dockerfile  app.py  docker-compose.yml  pipeline_web.py  stage3_graph.py
web_inspector/: app.js  index.html  styles.css
(+22 files in other folders)
