[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    "mlflow==2.13.0",
    "protobuf==3.20.3",
    "numpy<2.0",
    "pandas<3.0",
    "scikit-learn>=1.3,<1.6",
    "matplotlib>=3.7,<3.9",
    "seaborn>=0.12,<0.14",
    "datasets>=2.18,<3.0",
    "sentence-transformers>=2.6,<3.0",
    "requests>=2.31,<3.0",
    "python-dotenv>=1.0,<2.0",
    "textstat>=0.7,<1.0",
    "wordcloud>=1.9,<2.0",
    "ipykernel>=6.0,<7.0",
    "ollama>=0.1,<1.0",
    "setuptools>=82.0.1",
]
